# Resume-Analyzer

./: HEROKU_DEPLOYMENT.md  README.md  deploy.ps1  deploy.sh  main.py  pyproject.toml  requirements.txt  scheduler.py
src/: __init__.py
src/ai/: resume_analyzer.py
src/models/: resume.py
src/sheets/: __init__.py  google_sheets.py  resume_converter.py  resume_extractor.py
src/utils/: config.py  logger.py
tests/: test_conversion.py  test_cv_scoring.py  test_llm_response_extraction.py  test_ocr.py  test_pdf_extraction.py  test_resume_processing.py  test_scoring_logic.py
